--- a/configs/alexnet_base.yaml
+++ b/configs/alexnet_base.yaml
@@ -7,8 +7,8 @@ DATA:
   NUM_WORKERS: 32
   PIN_MEMORY: True
 MODEL:
-  NAME: lenet
-  NUM_CLASSES: 200
+  NAME: alexnet
+  NUM_CLASSES: 10
   DROP_RATE: 0.5
 TRAIN:
   EPOCHS: 50
