--- a/configs/alexnet_base.yaml
+++ b/configs/alexnet_base.yaml
@@ -23,7 +23,7 @@ TRAIN:
     EPS: 1e-8
     BETAS: (0.9, 0.999)
     MOMENTUM: 0.9
-OUTPUT: "output/alexnet_cifar"
+OUTPUT: "output/alexnet_base"
 SAVE_FREQ: 5
 PRINT_FREQ: 99999
 PRINT_FREQ: 99999
