--- a/configs/alexnet_base.yaml
+++ b/configs/alexnet_base.yaml
@@ -23,6 +23,21 @@ TRAIN:
     EPS: 1e-8
     BETAS: (0.9, 0.999)
     MOMENTUM: 0.9
+OUTPUT: BASE: ['resnet18_base.yaml']
+DATA:
+  BATCH_SIZE: 32
+  DATASET: "medium_imagenet"
+  IMG_SIZE: 32
+  NUM_WORKERS: 32
+  PIN_MEMORY: True
+MODEL:
+  NUM_CLASSES: 200
+TRAIN:
+  EPOCHS: 10
+  WARMUP_EPOCHS: 2
+OUTPUT: "output/alexnet_base.yaml"
+SAVE_FREQ: 1
+PRINT_FREQ: 500
 SAVE_FREQ: 5
 PRINT_FREQ: 99999
 PRINT_FREQ: 99999
